# pygario

./: README.md
client/: pyproject.toml  todolist.md
client/pygario/: __main__.py  blob.py  blob_label.py  cell.py  client.py  color.py  constants.py  game.py  game_object.py  label.py  player.py  vector.py  viewport.py
client/pygario/gui/: button.py  container.py  label.py  ui_component.py
client/pygario/scenes/: main_scene.py  menu_scene.py  scene.py
server/: pyproject.toml
server/pygario_server/: __main__.py  blob.py  cell.py  color.py  constants.py  server.py
